--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prod": "vite serve --mode production",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint-staged": { "*.{vue,js,ts}": "eslint --fix" }
   },
   "dependencies": {
     "@vue/runtime-core": "^3.2.33",
@@ -27,11 +28,12 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^8.7.1",
+    "husky": "^7.0.0",
+    "lint-staged": "^12.4.1",
     "sass": "^1.51.0",
     "typescript": "^4.5.4",
     "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.5",
-    "vue-tsc": "^0.34.7",
-    "husky": "^7.0.0"
+    "vue-tsc": "^0.34.7"
   }
 }
