--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-    "lint-staged": { "*.{vue,js,ts}": "eslint --fix" }
+    "lint-staged": {
+      "*.{vue,js,ts}": "eslint --fix"
+    }
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.6",
     "@vue/runtime-core": "^3.2.33",
     "axios": "^0.27.2",
     "element-plus": "^2.1.11",
-    "normalize.css": "^8.0.1",
     "pinia": "^2.0.13",
+    "style-resources-loader": "^1.5.0",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
